--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "tailwindcss": "^1.1.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.2"
   },
   "devDependencies": {
     "@ianaya89/vue-cli-plugin-tailwind": "~1.1.0",
